<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ai_journal"
            android:icon="@drawable/icon_post_foreground"
            android:title="@string/ai_entry" />
        <item
            android:id="@+id/nav_manual_journal"
            android:icon="@drawable/icon_post_foreground"
            android:title="@string/manual_entry" />
        <item
            android:id="@+id/nav_therapists"
            android:icon="@drawable/icon_profile_foreground"
            android:title="@string/therapists" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>
