<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/logoIcon"
            android:contentDescription="@string/login"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/greetingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/great"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/logoIcon"
            android:gravity="center"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/registerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/greetingTextView"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameRegisterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameRegisterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneRegisterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailRegisterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordRegisterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordRegisterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_role"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"/>

                <RadioGroup
                    android:id="@+id/roleRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/roleUserRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="10dp"
                        android:text="@string/user" />

                    <RadioButton
                        android:id="@+id/roleTherapistRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/therapist" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/termsConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/registerForm">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreePrompt"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/registerPromptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ToA"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/registerPrompt"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:background="@drawable/rounded_button"
            app:layout_constraintTop_toBottomOf="@id/termsConditions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/registerButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountExists"
                android:textSize="17sp"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"/>

            <TextView
                android:id="@+id/loginPromptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
