<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/main"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        android:scaleType="fitCenter"
        android:contentDescription="@string/login"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/greetingTextView"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp">

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:inputType="text" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:inputType="textPassword" />
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingTop="5dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/loginForm" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />

    <LinearLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/loginButton">

      <View
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:layout_weight="1"
          android:background="@color/colorPrimary" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/alternative"
          android:paddingHorizontal="8dp"
          android:textStyle="bold" />

      <View
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:layout_weight="1"
          android:background="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/socialLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/divider">

      <ImageView
          android:id="@+id/google_login"
          android:layout_width="85dp"
          android:layout_height="85dp"
          android:src="@mipmap/google_icon"
          android:contentDescription="@string/google_login"
          android:padding="8dp"
          android:clickable="true"
          android:focusable="true" />

      <ImageView
          android:id="@+id/apple_login"
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:src="@mipmap/apple_icon"
          android:contentDescription="@string/apple_login"
          android:padding="10dp"
          android:clickable="true"
          android:focusable="true" />

      <ImageView
          android:id="@+id/facebook_login"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:src="@mipmap/facebook_icon"
          android:contentDescription="@string/facebook_login"
          android:padding="8dp"
          android:clickable="true"
          android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/socialLogin"
        android:layout_marginBottom="16dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/register"
          android:textSize="17sp"
          android:paddingStart="5dp"
          android:paddingEnd="5dp" />

      <TextView
          android:id="@+id/registerPromptTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:focusable="true"
          android:text="@string/registerPrompt"
          android:textColor="@color/colorPrimary"
          android:textSize="17sp"
          android:textStyle="bold"
          tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
